; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/intel/iwlwifi/fw/extr_dbg.c_iwl_read_prph_block.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/intel/iwlwifi/fw/extr_dbg.c_iwl_read_prph_block.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iwl_trans = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.iwl_trans*, i64, i64, i32*)* @iwl_read_prph_block to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @iwl_read_prph_block(%struct.iwl_trans* %0, i64 %1, i64 %2, i32* %3) #0 {
  %5 = alloca %struct.iwl_trans*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i64, align 8
  store %struct.iwl_trans* %0, %struct.iwl_trans** %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  store i32* %3, i32** %8, align 8
  store i64 0, i64* %9, align 8
  br label %10

10:                                               ; preds = %23, %4
  %11 = load i64, i64* %9, align 8
  %12 = load i64, i64* %7, align 8
  %13 = icmp slt i64 %11, %12
  br i1 %13, label %14, label %26

14:                                               ; preds = %10
  %15 = load %struct.iwl_trans*, %struct.iwl_trans** %5, align 8
  %16 = load i64, i64* %6, align 8
  %17 = load i64, i64* %9, align 8
  %18 = add nsw i64 %16, %17
  %19 = call i32 @iwl_read_prph_no_grab(%struct.iwl_trans* %15, i64 %18)
  %20 = call i32 @cpu_to_le32(i32 %19)
  %21 = load i32*, i32** %8, align 8
  %22 = getelementptr inbounds i32, i32* %21, i32 1
  store i32* %22, i32** %8, align 8
  store i32 %20, i32* %21, align 4
  br label %23

23:                                               ; preds = %14
  %24 = load i64, i64* %9, align 8
  %25 = add nsw i64 %24, 4
  store i64 %25, i64* %9, align 8
  br label %10

26:                                               ; preds = %10
  ret void
}

declare dso_local i32 @cpu_to_le32(i32) #1

declare dso_local i32 @iwl_read_prph_no_grab(%struct.iwl_trans*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
